# mrs-ros-pkg

./: .gitignore  .travis.yml  README.md  mrs.rosinstall
mrs_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mrs_apps/launch/: key_teleop.launch
mrs_apps/scripts/: mrsArms_base_teleop.py  mrsBase_keyboard_teleop.py  mrsbase_teleop.py  phantom_vector.py
mrs_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
mrs_control/cfg/: Parameter.cfg
mrs_control/config/: mrs_control.yaml
mrs_control/launch/: mrs_control.launch  mrs_control_a2m.launch  mrs_control_jm1.launch  mrs_control_jm2w2.launch  mrs_control_w2m.launch  mrs_rqt.launch
mrs_control/nodes/: server.py
mrs_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_macro_update
mrs_description/KDL/: parse_parameter_server.cpp
mrs_description/launch/: 2w1j_base.launch  Ajm2_1.launch  a2m.launch  a2m_kinematic.launch  a2m_prismatic.launch  a2m_type2.launch  a3m.launch  a3m_type2.launch  hotcell_experiment.launch  jm1w2.launch  jm2w2.launch  mrs.rviz  mrs_odom.rviz  power_base.launch  w2m.launch  w2m_prismatic.launch  w2m_prismatic_type2.launch
mrs_description/meshes/: J1.dae  J2.dae  J3.dae  Pc.dae  W1.dae  WR1.dae  WR25.dae
mrs_description/openrave/: a2m_k1.robot.xml  arm_k1.dae  readme.txt
mrs_description/robots/: 2W1JM.urdf  2W1JM.xacro  A2M.xacro  A2M_kinematic.xacro  A2M_prismatic.xacro  A2M_type2.xacro  A3M.xacro  A3M_type2.xacro  AJM2_1.urdf  AJM2_1.xacro  JM1W2.urdf  JM1W2.xacro  JM2W2.xacro  W2M.urdf  W2M.xacro  W2M_prismatic.xacro  W2M_prismatic_type2.xacro  generic.xacro  hotcell.xacro  power_base.xacro  power_base_pic2.xacro
mrs_description/urdf/: common_mrs.xacro  materials.urdf.xacro  materials.xacro  simplified_mrs.xacro
mrs_description/urdf/JM/: jm.gazebo.xacro  jm.xacro  simplified_jm.xacro
mrs_description/urdf/PCM/: pcm.gazebo.xacro  pcm.xacro
mrs_description/urdf/power_base/: ball_bearing.urdf.xacro  base.urdf.xacro  sm_other.urdf.xacro
mrs_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
mrs_gazebo/launch/: 2W1JM.xacro.launch  Ajm2_1.launch  a2m.launch  a2m_prismatic.launch  hotcell_world.launch  jm1w2.launch  jm2w2.launch  multi_robot.launch  one_robot.launch  power_base.launch  w2m.launch  w2m_prismatic.launch
mrs_gazebo/models/Hotcell/: model-1_3.sdf  model.config  model.sdf
mrs_gazebo/models/Hotcell/meshes/: HotCell_ StorageCell.stl  Hotcell.dae  hotcell_scaled.blend
mrs_gazebo/models/Hotcell_with_manipulator/: model.config  model.sdf
mrs_gazebo/models/MT200_nuc_manipulator/: model.config  model.sdf
mrs_gazebo/models/MT200_nuc_manipulator/meshes/: Manipulator.dae
mrs_gazebo/models/all meshes/: HotCell and StorageCell_buildings.stl  magnet_1_with_support.dae  magnet_type1.dae  magnet_type1v2.dae  support.dae
mrs_gazebo/models/cern_TAX/: model-1_3.sdf  model.config  model.sdf
mrs_gazebo/models/cern_lhc/: model-1_3.sdf  model.config  model.sdf
mrs_gazebo/models/cern_magnet1/: model-1_3.sdf  model.config  model.sdf
mrs_gazebo/worlds/: hotcell.world
mrs_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mrs_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  mrs.srdf  ompl_planning.yaml
mrs_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+2 files in other folders)
