<?xml version="1.0"?>
<package>
  <name>mrs_apps</name>
  <description>The mrs_apps package</description>
	
	<version>0.1.0</version>
  <maintainer email="prithvisekhar@gmail.com">Prithvi Sekhar Pagala</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/telerobcar/telerobcar-ros-pkg/wiki</url>
  <url type="repository">https://bitbucket.org/telerobcar/telerobcar-ros-pkg</url>
  <author>Prithvi Sekhar Pagala</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
