<?xml version="1.0"?>
<package>
  <name>mrs_description</name>
  <description>The mrs_description package</description>

	<version>0.1.0</version>
  <maintainer email="prithvisekhar@gmail.com">Prithvi Sekhar Pagala</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/telerobcar/telerobcar-ros-pkg/wiki</url>
  <url type="repository">https://bitbucket.org/telerobcar/telerobcar-ros-pkg</url>
  <author>Prithvi Sekhar Pagala</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
  
</package>
